force-app/main/default/objects/Call_Report__c/fields/QWBS_Attendees__c.field-meta.xml
<CustomField>
    <fullName>QWBS_Attendees__c</fullName>
    <label>Omnitracs Attendees</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>