force-app/main/default/objects/Call_Report__c/fields/Requires_Prewire_Products__c.field-meta.xml
<CustomField>
    <fullName>Requires_Prewire_Products__c</fullName>
    <label>Requires Prewire Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>