force-app/main/default/objects/Call_Report__c/fields/Sales_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director_Email__c</fullName>
    <description>Sales Director from Account owner</description>
    <label>Sales Director Email</label>
    <type>Email</type>
</CustomField>