force-app/main/default/objects/Call_Report__c/fields/Sales_VP_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_VP_Email__c</fullName>
    <description>Sales VP Email from Account</description>
    <label>Sales VP Email</label>
    <type>Email</type>
</CustomField>