force-app/main/default/objects/Call_Report__c/fields/Situation_Questions__c.field-meta.xml
<CustomField>
    <fullName>Situation_Questions__c</fullName>
    <inlineHelpText>SITUATION questions you might ask to focus the discussion</inlineHelpText>
    <label>Situation Questions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>