force-app/main/default/objects/Call_Report__c/fields/Top_Customer_Issues__c.field-meta.xml
<CustomField>
    <fullName>Top_Customer_Issues__c</fullName>
    <description>Used to denote Call Reports items for leadership report</description>
    <label>Top Customer Issues</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>