force-app/main/default/objects/Call_Report__c/fields/Top_Customer_Issues_Flag__c.field-meta.xml
<CustomField>
    <fullName>Top_Customer_Issues_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>did not find any reference where this checkbox is used. Needs to be deleted. Workflow rules have been deactivated as per case - # 01794084</description>
    <label>Top Customer Issues Flag</label>
    <type>Checkbox</type>
</CustomField>