force-app/main/default/objects/Call_Report__c/fields/Type_of_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Competitor__c</fullName>
    <description>The type of Competitor is defined with respect to call report</description>
    <inlineHelpText>Enter the type of competitor</inlineHelpText>
    <label>Type of Competitor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>Competitive Takeaway</fullName>
            </value>
            <value>
                <fullName>Competitive Threat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>