force-app/main/default/objects/Call_Report__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>User Role</label>
    <type>Text</type>
</CustomField>