force-app/main/default/objects/Call_Report__c/fields/Year_Round_Business__c.field-meta.xml
<CustomField>
    <fullName>Year_Round_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if YES, leave alone if NO</inlineHelpText>
    <label>Year Round Business?</label>
    <type>Checkbox</type>
</CustomField>