force-app/main/default/objects/Call_Report__c/recordTypes/Call_Plans.recordType-meta.xml
<RecordType>
    <fullName>Call_Plans</fullName>
    <active>true</active>
    <description>Used for Call Plans</description>
    <label>Call Plans</label>
</RecordType>