force-app/main/default/objects/Call_Report__c/recordTypes/CNR_Call_Reports.recordType-meta.xml
<RecordType>
    <fullName>CNR_Call_Reports</fullName>
    <active>true</active>
    <description>Used for CNR Call Reports</description>
    <label>CNR Call Reports</label>
</RecordType>