force-app/main/default/objects/Call_Report__c/recordTypes/Inside_Sales.recordType-meta.xml
<RecordType>
    <fullName>Inside_Sales</fullName>
    <active>true</active>
    <description>Call Report used for ISRs</description>
    <label>Inside Sales Call Report</label>
</RecordType>