force-app/main/default/objects/Call_Report__c/recordTypes/Omni_Pro_Serv_Call_Reports.recordType-meta.xml
<RecordType>
    <fullName>Omni_Pro_Serv_Call_Reports</fullName>
    <active>true</active>
    <description>Call Reports for Omni Domestic Professional Services</description>
    <label>Pro Serv Call Reports</label>
</RecordType>