force-app/main/default/objects/Call_Report__c/recordTypes/Product_Mgmt_Call_Report.recordType-meta.xml
<RecordType>
    <fullName>Product_Mgmt_Call_Report</fullName>
    <active>true</active>
    <description>Used for Product Management call reports</description>
    <label>Product Mgmt Call Report</label>
</RecordType>