force-app/main/default/objects/Call_Report__c/recordTypes/QES_Call_Reports.recordType-meta.xml
<RecordType>
    <fullName>QES_Call_Reports</fullName>
    <active>true</active>
    <description>Used for Sales call reports</description>
    <label>Omnitracs Call Reports</label>
</RecordType>