force-app/main/default/objects/Call_Report__c/recordTypes/Roadnet_Sales_Calls.recordType-meta.xml
<RecordType>
    <fullName>Roadnet_Sales_Calls</fullName>
    <active>true</active>
    <description>Tracks calls Roadnet Sales team makes</description>
    <label>Roadnet Sales Calls</label>
</RecordType>