force-app/main/default/objects/Call_Report__c/validationRules/Meeting_Objective.validationRule-meta.xml
<ValidationRule>
    <fullName>Meeting_Objective</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( $Profile.Name &lt;&gt; &quot;QWBS Interface&quot;, 
ISPICKVAL(  Status__c , &quot;Completed&quot;), 
(  Meeting_Objective_Agenda__c =&quot;&quot; ) ,
$RecordType.Name &lt;&gt; &quot;Call Plans&quot;, 
$RecordType.Name &lt;&gt; &quot;Inside Sales Call Report&quot;,
$RecordType.Name &lt;&gt; &quot;Product Mgmt Call Report&quot;
)</errorConditionFormula>
    <errorDisplayField>Meeting_Objective_Agenda__c</errorDisplayField>
    <errorMessage>Meeting Objective / Agenda is required once a call report is completed.</errorMessage>
</ValidationRule>