force-app/main/default/objects/Call_Report__c/validationRules/Next_Objective_Strategy.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Objective_Strategy</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( $Profile.Name &lt;&gt; &quot;QWBS Interface&quot;, 
ISPICKVAL(  Status__c , &quot;Completed&quot;), 
( Next_Objective_Strategy__c  =&quot;&quot; ) ,
$RecordType.Name &lt;&gt; &quot;Call Plans&quot;,
$RecordType.Name &lt;&gt; &quot;Inside Sales Call Report&quot;,
$RecordType.Name &lt;&gt; &quot;Product Mgmt Call Report&quot;)</errorConditionFormula>
    <errorDisplayField>Next_Objective_Strategy__c</errorDisplayField>
    <errorMessage>Next Objective and Strategy is required once a call report is completed.</errorMessage>
</ValidationRule>