force-app/main/default/objects/Call_Report__c/validationRules/Not_editable_as_status_is_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_editable_as_status_is_complete</fullName>
    <active>true</active>
    <description>The record cannot be edited as status is complete except for users with system admin profile.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, (ISPICKVAL(PRIORVALUE(Status__c), &quot;Completed&quot;))
)</errorConditionFormula>
    <errorMessage>The Call Report cannot be edited as the &apos;Status&apos; is already moved to Completed</errorMessage>
</ValidationRule>