force-app/main/default/objects/Call_Report__c/listViews/All_Call_Reports.listView-meta.xml
<ListView>
    <fullName>All_Call_Reports</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Purpose__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Top_Customer_Issues__c</columns>
    <columns>Items_for_Executive_Assistance__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Call Reports</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>