force-app/main/default/objects/Call_Report__c/listViews/MyCallReports_d_9.listView-meta.xml
<ListView>
    <fullName>MyCallReports_d_9</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Purpose__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Call Reports</label>
</ListView>